修改代码目录结构